Fix navigation button alignment Fix Grid

--- a/css/style.css
+++ b/css/style.css
@@ -266,9 +266,12 @@ background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAIAAAAlC
   width: 100%;
   display: flex;
   justify-content: center;
+  position: absolute;
+  z-index: -1;
 }
 
 #intro .wrapper-safari img {
+  width: 100%;
   height: 100%;
 }
 
@@ -393,9 +396,10 @@ background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAIAAAAlC
 #udaan-departments .navigation-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-end;
   padding-right: 1vmin;
   right: 0;
+  bottom: 2vh;
   position: absolute;
   z-index: 1;
 }
@@ -426,6 +430,7 @@ background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAIAAAAlC
   justify-content: center;
   padding-left: 1vmin;
   left: 0;
+  bottom: 2vh;
   position: absolute;
   z-index: 1;
 }
